# r_solar

./: Cargo.toml  memory.x  не забудь.txt
.cargo/: config.toml
src/: init.rs
